--- a/Booking Engine V2.0 .html
+++ b/Booking Engine V2.0 .html
@@ -19,6 +19,10 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+        h1 {
+            text-align: center;
+            color: #007bff;
+        }
         h2 {
             color: #333;
             border-bottom: 2px solid #007bff;
@@ -38,6 +42,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>Ratebot AI</h1>
         <h2>Core Features of Booking Engine v2.0</h2>
         <ul>
             <li>Seamless onboarding experience similar to leading OTAs</li>
