Update Booking Engine V2.0 .html

--- a/Booking Engine V2.0 .html
+++ b/Booking Engine V2.0 .html
@@ -21,7 +21,7 @@
         }
         h1 {
             text-align: center;
-            color: #007bff;
+            color: #05152d;
         }
         h2 {
             color: #333;
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Ratebot AI</h1>
+        <h1>RatebotAI</h1>
         <h2>Core Features of Booking Engine v2.0</h2>
         <ul>
             <li>Seamless onboarding experience similar to leading OTAs</li>
